# 1brc

./: .gitignore  Cargo.toml  justfile  measurements-small.txt  readme.md  result_ref.txt
examples/: generate.rs
src/: main.rs
